animation overflow issue testing

--- a/src/css/background-animations.css
+++ b/src/css/background-animations.css
@@ -2,11 +2,12 @@
     position: absolute;
     justify-content: center;
     align-items: center;
-    border: 4px solid orange;
+    /* border: 4px solid orange; */
     width: 100%;
-    height: 100vh;
+    height: 100%;
     /* z-index: -1; */
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
+    overflow-y: visible;
 }
 
 #flowAnimation {
@@ -18,7 +19,7 @@
     height: 600px;
     width: 100%;
     top: 300px;
-    overflow: hidden;
+    overflow-x: hidden;
     display: none;
     opacity: 0;
     animation-fill-mode: forwards;
@@ -98,36 +99,37 @@
     display: none;
     justify-content: center;
     align-items: center;
-    height: 580px;
+    height: 810px;
+    top: -130px;
+    right: 0px;
     width: 100%;
-    /* overflow: hidden; */
+    overflow-x: hidden;
     opacity: 0;
     animation-fill-mode: forwards;
     margin-top: 50px;
-    transform: scale(0.75);
     /* border: 3px solid cyan; */
     /* min-width: 1000px; */
 }
 
 #circleOuter {
-    height: 800px;
-    width: 800px;
+    height: 600px;
+    width: 600px;
     position: absolute;
     /* opacity: 0.05; */
     animation: circleOuterAnimation 6s linear infinite;
 }
 
 #circleMiddle {
-    height: 600px;
-    width: 600px;
+    height: 400px;
+    width: 400px;
     position: absolute;
     /* opacity: 0.05; */
     animation: circleMiddleAnimation 6s linear infinite;
 }
 
 #circleInner {
-    height: 400px;
-    width: 400px;
+    height: 200px;
+    width: 200px;
     position: absolute;
     /* opacity: 0.05; */
     animation: circleInnerAnimation 6s linear infinite;
@@ -219,10 +221,10 @@
 /* adjusting animation heights for changes in height (e.g. mobile) */
 @media (max-width: 504px) {
     #flowAnimation {
-        top: 475px;
+        top: 472px;
     }
     #chillAnimation {
-        height: 900px;
+        top: 45px;
     }
     #animationContainer::-webkit-scrollbar {
         display: none;
